--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <section id="enrollment-form" class="enrollment-section">
         <div class="container">
             <div class="section-header text-center">
-                <h2>Start Here</h2>
-                <p class="subtitle">Select your role to begin the enrollment process</p>
+                <h2><span style="color: var(--pink-color);">llowed by that page and</span>Start here.</span> This form is for:</h2>
+                <p class="subtitle" style="margin-top: var(--spacing-sm);">Schools ready to enroll students.<br>Schools interested in receiving more information.</p>
             </div>
 
             <!-- User Type Selection -->
