Fix text colors on thank you page and correct typo on homepage - replace grey text with dark text for better readability

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="enrollment-form" class="enrollment-section">
         <div class="container">
             <div class="section-header text-center">
-                <h2><span style="color: var(--pink-color);">llowed by that page and</span>Start here.</span> This form is for:</h2>
+                <h2><span style="color: var(--pink-color);">Start here.</span> This form is for:</h2>
                 <p class="subtitle" style="margin-top: var(--spacing-sm);">Schools ready to enroll students.<br>Schools interested in receiving more information.</p>
             </div>
 
