Restore multi-step form design and update background video to Vimeo

--- a/es/index.html
+++ b/es/index.html
@@ -44,9 +44,9 @@
     </nav>
 
     <section class="hero">
-        <video class="hero-background-video" autoplay loop muted playsinline>
-            <source src="https://yvape.org/static/media/video/YVAPE%20Promo%20-%20Final%202024.mp4" type="video/mp4">
-        </video>
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; opacity: 0.3; z-index: 0;">
+            <iframe src="https://player.vimeo.com/video/821331257?background=1&autoplay=1&loop=1&byline=0&title=0&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position: absolute; top: 50%; left: 50%; min-width: 100%; min-height: 100%; width: auto; height: auto; transform: translate(-50%, -50%);"></iframe>
+        </div>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Programa Educativo Alternativo sobre el Vapeo Juvenil</h1>
