Fix video to fit properly in hero container

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; opacity: 0.3; z-index: 0;">
-            <iframe src="https://player.vimeo.com/video/821331257?background=1&autoplay=1&loop=1&byline=0&title=0&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position: absolute; top: 50%; left: 50%; min-width: 100%; min-height: 100%; width: auto; height: auto; transform: translate(-50%, -50%);"></iframe>
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; opacity: 0.3; z-index: 0; pointer-events: none;">
+            <iframe src="https://player.vimeo.com/video/821331257?background=1&autoplay=1&loop=1&byline=0&title=0&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;"></iframe>
         </div>
         <div class="container">
             <div class="hero-content">
