Add autofill support and HubSpot form integration with configuration system

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="progress-steps" id="progressSteps"></div>
                 </div>
 
-                <form id="enrollmentForm" class="enrollment-form">
+                <form id="enrollmentForm" class="enrollment-form" autocomplete="on">
                     <!-- Form steps will be dynamically inserted here -->
                 </form>
 
@@ -365,6 +365,7 @@
         </div>
     </footer>
 
+    <script src="js/hubspot-config.js"></script>
     <script src="js/schools-data.js"></script>
     <script src="js/main.js"></script>
 </body>
