Remove background video and change Start Enrollment button to pink

--- a/es/index.html
+++ b/es/index.html
@@ -44,15 +44,12 @@
     </nav>
 
     <section class="hero">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; opacity: 0.3; z-index: 0; pointer-events: none;">
-            <iframe src="https://player.vimeo.com/video/821331257?background=1&autoplay=1&loop=1&byline=0&title=0&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position: absolute; top: 50%; left: 50%; width: 100vw; height: 100vh; transform: translate(-50%, -50%); min-width: 100%; min-height: 100%;"></iframe>
-        </div>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Programa Educativo Alternativo sobre el Vapeo Juvenil</h1>
                 <p class="hero-subtitle">YVAPE es un programa de intervención educativo <strong>GRATUITO</strong> que sirve como alternativa a la suspensión, brindando apoyo de coaching por teléfono y video a los estudiantes que han sido encontrados con nicotina o marihuana en la escuela.</p>
                 <div class="hero-cta">
-                    <a href="#enrollment-form" class="btn btn-primary btn-lg">Comenzar Inscripción</a>
+                    <a href="#enrollment-form" class="btn btn-lg" style="background: var(--pink-color); color: white; border-color: var(--pink-color);">Comenzar Inscripción</a>
                     <a href="#how-it-works" class="btn btn-secondary btn-lg">Más Información</a>
                 </div>
                 <p class="hero-note">Disponible para escuelas públicas de California con estudiantes de 12 años o más</p>
