--- a/index.html
+++ b/index.html
@@ -48,15 +48,12 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; opacity: 0.3; z-index: 0; pointer-events: none;">
-            <iframe src="https://player.vimeo.com/video/821331257?background=1&autoplay=1&loop=1&byline=0&title=0&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position: absolute; top: 50%; left: 50%; width: 100vw; height: 100vh; transform: translate(-50%, -50%); min-width: 100%; min-height: 100%;"></iframe>
-        </div>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Youth Vaping Alternative Program Education</h1>
                 <p class="hero-subtitle">YVAPE is a <strong>FREE</strong> educational intervention program that serves as an alternative to suspension, providing phone and video coaching support to students who have been found with nicotine or marijuana at school.</p>
                 <div class="hero-cta">
-                    <a href="#enrollment-form" class="btn btn-primary btn-lg">Start Enrollment</a>
+                    <a href="#enrollment-form" class="btn btn-lg" style="background: var(--pink-color); color: white; border-color: var(--pink-color);">Start Enrollment</a>
                     <a href="#how-it-works" class="btn btn-secondary btn-lg">Learn More</a>
                 </div>
                 <p class="hero-note">Available to California public schools with students 12 years and older</p>
