--- a/about.html
+++ b/about.html
@@ -57,6 +57,27 @@
         </div>
     </section>
 
+    <!-- About YVAPE Video Section -->
+    <section style="padding: var(--spacing-xxl) 0; background: var(--bg-light);">
+        <div class="container">
+            <div style="max-width: 1200px; margin: 0 auto;">
+                <h2 style="text-align: center; margin-bottom: var(--spacing-lg); color: var(--primary-color);">Learn About YVAPE</h2>
+                <div class="video-player-wrapper">
+                    <div class="video-player-container">
+                        <iframe 
+                            width="100%" 
+                            height="100%" 
+                            src="https://www.youtube.com/embed/Ph_irxSPI5c" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="content-section">
         <div class="container">
             <div class="content-block">
