Add real video thumbnail previews from Wistia to video cards with improved play button styling

--- a/videos.html
+++ b/videos.html
@@ -82,6 +82,7 @@
             <div class="videos-grid-full">
                 <div class="video-card-full" data-video-id="p246p6i35l" data-title="Top 6 Tips to Quit Nicotine Vapes" data-description="Practical strategies and advice to help you quit vaping nicotine successfully.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/p246p6i35l.jpg" alt="Top 6 Tips to Quit Nicotine Vapes">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -92,6 +93,7 @@
 
                 <div class="video-card-full" data-video-id="p6t85drsro" data-title="Vaping Marijuana" data-description="Understanding the risks and effects of vaping marijuana.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/p6t85drsro.jpg" alt="Vaping Marijuana">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -102,6 +104,7 @@
 
                 <div class="video-card-full" data-video-id="tpe7y7zflx" data-title="Personal Responsibility" data-description="Learn about making responsible choices and taking ownership of your decisions.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/tpe7y7zflx.jpg" alt="Personal Responsibility">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -112,6 +115,7 @@
 
                 <div class="video-card-full" data-video-id="l71fzsmxp4" data-title="Dealing with Stress" data-description="Healthy ways to manage stress without relying on substances.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/l71fzsmxp4.jpg" alt="Dealing with Stress">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -122,6 +126,7 @@
 
                 <div class="video-card-full" data-video-id="ct2feaq8uw" data-title="Marijuana and Mental Health" data-description="How marijuana use affects your mental health and wellbeing.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/ct2feaq8uw.jpg" alt="Marijuana and Mental Health">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -132,6 +137,7 @@
 
                 <div class="video-card-full" data-video-id="ttt7k54gsj" data-title="Nicotine and Mental Health" data-description="Understanding the connection between nicotine use and mental health.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/ttt7k54gsj.jpg" alt="Nicotine and Mental Health">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -142,6 +148,7 @@
 
                 <div class="video-card-full" data-video-id="ip3zsyxct4" data-title="Understanding Motivation" data-description="Discover what motivates you and how to harness that power for positive change.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/ip3zsyxct4.jpg" alt="Understanding Motivation">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -152,6 +159,7 @@
 
                 <div class="video-card-full" data-video-id="cakglb4vfs" data-title="Health Effects of Vaping" data-description="Learn about the short and long-term health effects of vaping.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/cakglb4vfs.jpg" alt="Health Effects of Vaping">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -162,6 +170,7 @@
 
                 <div class="video-card-full" data-video-id="pob4w82dre" data-title="Marketing Manipulation" data-description="How vaping companies target and manipulate young people through marketing.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/pob4w82dre.jpg" alt="Marketing Manipulation">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -172,6 +181,7 @@
 
                 <div class="video-card-full" data-video-id="03q4n9jzy5" data-title="Asking for Help Quitting" data-description="It's okay to ask for help. Learn about resources available to support you.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/03q4n9jzy5.jpg" alt="Asking for Help Quitting">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
@@ -182,6 +192,7 @@
 
                 <div class="video-card-full" data-video-id="m0eyx7d5wj" data-title="Vaping Marijuana: Your Brain & Lungs" data-description="The science behind how marijuana vaping affects your brain and respiratory system.">
                     <div class="video-thumbnail-full">
+                        <img src="https://embed-ssl.wistia.com/deliveries/m0eyx7d5wj.jpg" alt="Vaping Marijuana: Your Brain & Lungs">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
